Bug 941873. Blocked AudioNodeStreams should not run processing. r=karl